--- a/index.html
+++ b/index.html
@@ -3,9 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>경진 JS 저장소</title>
+    <title>경진 JS 계산기</title>
+    <link rel="stylesheet" href="./index.css">
 </head>
 <body>
+   <div class="container">
+    <h1>2025<br>
+        Jaba Script <br>
+        기록서</h1>
+
+    <details open>
+      <summary>🗓 2025년 07월</summary>
+      <ul class="log-list">
+        <li>
+          <span class="date">07월 16일</span>
+          <span class="note">변수 선언 let, const, var 비교</span>
+        </li>
+        <li>
+          <span class="date">07월 17일</span>
+          <span class="note">조건문 if / else 연습</span>
+        </li>
+        <!-- 계속 추가 -->
+      </ul>
+    </details>
     
 </body>
 </html>
