--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <section class="month">
       <h2>08.M</h2>
       <ul class="file-list">
-        <li><a href="#">08.01.fri_file</a></li>
+        <li><a href="./html/0801/www3_01.html">08.01.fri - 함수 선언 및 호출, 전역 변수, 지역변수</a></li>
         <li><a href="#">08.02.mon_file</a></li>
         <li><a href="#">08.03.tue_file</a></li>
         
