--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <li><a href="./work/index0728.html">07.28.mon - 외부js, 할당연산자, 비교연산자</a></li>
         <li><a href="./work/index0729.html">07.29.tue - 출력문 종류별로 정리, 연산자 정리, vscode디버깅 연습</a></li>
         <li><a href="./work/index0729.html">07.30.wed - if, elseif, else  , for, Date(), random()</a></li>
+        <li><a href="./html/0731/index10.html">07.31.thu - 제어문 전체 응용 및 정리_예약좌석만들기</a></li>
       </ul>
     </section>
 
@@ -35,7 +36,7 @@
       <h2>08.M</h2>
       <ul class="file-list">
         <li><a href="./html/0801/www3_01.html">08.01.fri - 함수 선언 및 호출, 전역 변수, 지역변수</a></li>
-        <li><a href="#">08.02.mon_file</a></li>
+        <li><a href="./html/0731/index10.html">08.02.mon_file</a></li>
         <li><a href="#">08.03.tue_file</a></li>
         
       </ul>
