그동안 업로드 못한거 js
한개씩 각 일수마다 근데 나중에 업데이트해서 응용한것들도 같이 올리면 좋겠다.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 
   <body>
     <header>
-      <img class="logo" src="./images/ar_01.png" alt="화살표" />
+      <a href="https://kungjin.github.io/html2507/">
+      <img class="logo" src="./images/ar_01.png" alt="화살표">
+      </a>
       <h1>Kyoungzin_JS Room</h1>
     </header>
 
@@ -25,9 +27,9 @@
       <section class="month">
         <h2>07.M</h2>
         <ul class="file-list">
-          <li><a href="./work/index0724.html">07.24.thu - var, let, const, typeof, 자료형 </a></li>
-          <li><a href="./work/index0725.html">07.25.fri - 특수기호, consol.log, innerHtml, 산술연산자</a></li>
-          <li><a href="./work/index0728.html">07.28.mon - 외부js, 할당연산자, 비교연산자</a></li>
+          <li><a href="./html/0724/index03.html">07.24.thu - var, let, const, typeof, 자료형 </a></li>
+          <li><a href="./html/0725/index.html">07.25.fri - 특수기호, consol.log, innerHtml, 산술연산자</a></li>
+          <li><a href="./html/0728/index2.html">07.28.mon - 외부js, 할당연산자, 비교연산자</a></li>
           <li><a href="./work/index0729.html">07.29.tue - 출력문 종류별로 정리, 연산자 정리, vscode디버깅 연습</a></li>
           <li><a href="./work/index0729.html">07.30.wed - if, elseif, else , for, Date(), random()</a></li>
           <li><a href="./html/0731/index10.html">07.31.thu - 제어문 전체 응용 및 정리_예약좌석만들기</a></li>
