--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
           <li><a href="./html/0724/index03.html">07.24.thu - var, let, const, typeof, 자료형 </a></li>
           <li><a href="./html/0725/index.html">07.25.fri - 특수기호, consol.log, innerHtml, 산술연산자</a></li>
           <li><a href="./html/0728/index2.html">07.28.mon - 외부js, 할당연산자, 비교연산자</a></li>
-          <li><a href="./work/index0729.html">07.29.tue - 출력문 종류별로 정리, 연산자 정리, vscode디버깅 연습</a></li>
-          <li><a href="./work/index0729.html">07.30.wed - if, elseif, else , for, Date(), random()</a></li>
+          <li><a href="./html/0729/index5.html">07.29.tue - 출력문 종류별로 정리, 연산자 정리, vscode디버깅 연습</a></li>
+          <li><a href="./html/0730/index3.html">07.30.wed - if, elseif, else , for, Date(), random()</a></li>
           <li><a href="./html/0731/index10.html">07.31.thu - 제어문 전체 응용 및 정리_예약좌석만들기</a></li>
         </ul>
       </section>
