--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <h2>08.M</h2>
         <ul class="file-list">
           <li><a href="./html/0801/www3_01.html">08.01.fri - 함수 선언 및 호출, 전역 변수, 지역변수</a></li>
-          <li><a href="./html/0731/index10.html">08.02.mon - </a></li>
+          <li><a href="./html/0804/hw_01.html">08.04.mon - </a></li>
           <li><a href="#">08.03.tue - file</a></li>
           <li><a href="#">08.04.wed - file</a></li>
           <li><a href="#">08.05.thu - file</a></li>
