수정및 보완 0808
수정 0808

--- a/index.html
+++ b/index.html
@@ -41,12 +41,7 @@
         <ul class="file-list">
           <li><a href="./html/0801/www3_01.html">08.01.fri - 함수 선언 및 호출, 전역 변수, 지역변수</a></li>
           <li><a href="./html/0804/hw_01.html">08.04.mon - 자바스크립트 내장 객체  </a></li>
-          <li><a href="#">08.03.tue - file</a></li>
-          <li><a href="#">08.04.wed - file</a></li>
-          <li><a href="#">08.05.thu - file</a></li>
-          <li><a href="#">08.06.fri - file</a></li>
-          <li><a href="#">08.07.sat - file</a></li>
-          <li><a href="#">08.08.sun - file</a></li>
+          <li><a href="./html/0808/index_Hw.html">08.08.sun - 리액트 클래스와 메서드  </a></li>
           <li><a href="#">08.09.mon - file</a></li>
           <li><a href="#">08.10.tue - file</a></li>
           <li><a href="#">08.11.wed - file</a></li>
